FORMULARIA de DETALHES

--- a/src/pages/formulario/formulario.html
+++ b/src/pages/formulario/formulario.html
@@ -55,7 +55,7 @@
           <ion-col col-12>
   
             <ion-item-group>
-              <ion-item-divider color="primary">Criar Conta</ion-item-divider>
+              <ion-item-divider color="primary">CRIAR CONTA</ion-item-divider>
             </ion-item-group>
   
           </ion-col>
@@ -87,7 +87,7 @@
           <ion-col col-12>
   
             <ion-item-group>
-              <ion-item-divider color="primary">DADOS DE ENTREGA</ion-item-divider>
+              <ion-item-divider color="primary">ENDEREÇO DE ENTREGA</ion-item-divider>
             </ion-item-group>
   
           </ion-col>
